scss/common/_header.scss
.d-header {
  box-shadow: $header-box-shadow;
  color: unquote('$header-primary');
  height: auto;
  margin: 0;
  min-height: $header-height;
  padding: $header-padding-y $header-padding-x;

  button {
    &.login-button,
    &.sign-up-button {
      align-items: center;
      background-color: transparent;
      background-image: none;
      border-radius: 50%;
      color: transparent;
      display: flex;
      font-size: inherit;
      height: ($header-height - $header-padding-y * 2);
      justify-content: center;
      line-height: inherit;
      margin-top: 0;
      margin-left: $header-inner-spacer-x;
      overflow: hidden;
      padding: 0;
      position: relative;
      text-indent: 300%;
      white-space: nowrap;
      width: ($header-height - $header-padding-y * 2);

      @include focus-hover {
        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
      }

      &:focus {
        outline: 0;
      }
    }

    &.login-button {
      .fa-user {
        color: unquote('$header-primary');
        margin-right: 100%;
        position: absolute;
        top: 50%;
        left: 50%;
        text-indent: 0;
        transform: translate(-50%, -50%);
      }
    }

    &.sign-up-button {
      @include material-icons('person_add');

      &::before {
        color: unquote('$header-primary');
        margin-right: 100%;
        position: absolute;
        top: 50%;
        left: 50%;
        text-indent: 0;
        transform: translate(-50%, -50%);
      }
    }
  }

  .contents {
    align-items: center;
    display: flex;
    justify-content: space-between;
    margin: 0;
  }

  .extra-info {
    &,
    &.two-rows {
      h1 {
        @extend %typography-h4;

        margin: 0;
      }
    }
  }

  .extra-info-wrapper {
    margin-left: $header-inner-spacer-x;

    .badge-wrapper {
      margin-right: 0;
      margin-left: $header-inner-spacer-x;

      @include focus-hover {
        box-shadow: inset 0 0 1px currentColor;
      }

      &.bullet {
        margin-top: 0;
      }
    }
  }

  .header-buttons {
    align-items: center;
    display: flex;
    margin-top: 0;
  }

  .icons {
    align-items: center;
    display: flex;
    margin: 0;

    .badge-notification,
    .ring {
      top: ($chip-padding-y / -2);
    }

    .fa {
      height: auto;
      width: auto;
    }

    .icon {
      align-items: center;
      border: 0;
      border-radius: 50%;
      color: inherit;
      display: flex;
      height: ($header-height - $header-padding-y * 2);
      justify-content: center;
      margin-left: $header-inner-spacer-x;
      padding: 0;
      width: ($header-height - $header-padding-y * 2);

      @include focus-hover {
        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
        border: 0;
        color: inherit;
      }

      &:focus {
        outline: 0;
      }
    }

    .active .icon {
      .drop-down-mode &,
      .drop-down-visible & {
        background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
        border: 0;
        color: inherit;

        &::after {
          display: none;
        }
      }
    }
  }

  .panel {
    margin-left: auto;
    order: 1;
  }

  #site-logo {
    max-height: ($header-height - $header-padding-y * 3);
  }

  .title {
    a {
      align-items: center;
      display: flex;
    }
  }

  .title-wrapper {
    align-items: center;
    flex-wrap: nowrap;
    width: auto;
  }
}

#main-outlet {
  padding-top: ($header-height + $header-margin-y);
  padding-right: ($grid-gutter-width / 2);
  padding-left: ($grid-gutter-width / 2);
}

